package Usuarios.Propuestas;

import Prendas.GuardaRopa;

public interface Propuesta
{
	
	public void aceptarPropuesta(GuardaRopa guardaRopa);
	
	public void revertirPropuesta(GuardaRopa guardaRopa);
}
